# voice-control-feishu

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: karpathy-guidelines.mdc  vibe_coding.code-workspace
desktop/: __init__.py  __main__.py  app.py  audio.py  config.py  context_server.py  context_store.py  hotkey.py  options_popup.py  prompts.py  realtime.py
desktop/tools/: audit.py  lark_cli.py  schemas.py
docs/: AGENTS.md  PREPARATION.md  lark-capabilities.md
docs/reviews/: phase0-review.md  phase5-review.md
extension/: audio-worklet.js  background.js  content.js  feishu-api.js  manifest.json  options.html  options.js  panel-playground.html  popup.html  popup.js  styles.css  tools.js
scripts/: diagnose_context.py  smoke_test.py  verify_setup.py
tests/: test_audit.py  test_context_store.py  test_extra_coverage.py  test_lark_cli.py  test_realtime_events.py
