[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-feishu"
version = "0.1.0"
description = "Feishu voice assistant via OpenAI Realtime + lark-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyring>=25.0",
    "numpy>=2.0",
    "openai>=1.59",
    "sounddevice>=0.5",
    "websockets>=14.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "PyQt6>=6.7",
    "pynput>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["desktop"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["desktop", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["desktop"]

[[tool.mypy.overrides]]
module = "sounddevice"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pynput",
    "pynput.keyboard",
    "PyQt6.QtCore",
    "PyQt6.QtGui",
    "PyQt6.QtWidgets",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
